--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -12,11 +12,11 @@
 <body>
   <header>
     <h1>Library Management System</h1>
-    <nav>
+    <nav class="primary-nav">
       <ul>
         <li><a href="home.html">Home</a></li>
         <li><a href="inventory_books.html">Books</a></li>
-        <li><a href="inventory_authors.html">Authors</a></li>
+        <li><a class="active" href="inventory_authors.html">Authors</a></li>
         <li><a href="inventory_genres.html">Genres</a></li>
         <li><a href="inventory_copies.html">Copies</a></li>
         <li><a href="patrons.html">Patrons</a></li>
